opam-version: "2.0"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
author: "Reynir Björnsson <reynir@reynir.dk>"
dev-repo: "git+https://github.com/reynir/origami-sledgehammer.git"
homepage: "https://github.com/reynir/origami-sledgehammer/"
bug-reports: "https://github.com/reynir/origami-sledgehammer/issues/"
license: "BSD-2-clause"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "cmdliner"
  "lwt"
  "mirage-crypto"
  "mirage-crypto-rng"
  "tyre"
  "cohttp"
  "cohttp-lwt-unix"
  "base64"
  "tyxml"
]

synopsis: "Pastebin service"
